<resources>
    <string name="app_name">TELEMED</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="guard">Guard</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--    srushti -->
    <string name="lbl_m">M</string>
    <string name="lbl_upload_photo">Upload Photo</string>
    <string name="lbl_next">Next</string>
    <string name="msg_forget_password">Forget password ?</string>
    <string name="lbl_phone_no">Phone no.</string>
    <string name="lbl_doctor_profile">Doctor Profile</string>
    <string name="lbl_age">Age</string>
    <string name="msg_create_a_new_ac">Create a new account</string>
    <string name="lbl_firstname">Firstname</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_date_of_birth">Date of Birth</string>
    <string name="lbl_register_year">Register year</string>
    <string name="lbl_qualification">Qualification</string>
    <string name="lbl_patient">Patient</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="msg_welcome_back_p">Welcome back. Please fill in the form
 to sign in and continue.</string>
    <string name="lbl_enter_age">Enter age</string>
    <string name="msg_hello_login_no">Hello,
login now.</string>
    <string name="lbl_register_no2">Register no.</string>
    <string name="msg_enter_register">enter register year</string>
    <string name="lbl_name">Name</string>
    <string name="msg_enter_specializ">enter specialized</string>
    <string name="lbl_hello">Hello,
</string>
    <string name="msg_hello_register">Hello,
Register now</string>
    <string name="lbl_address_e_mail">Address e-mail</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_login_now">login now.</string>
    <string name="msg_virtual_ecosyst">Virtual
Ecosystem.</string>
    <string name="lbl_enter_phone_no">enter phone no.</string>
    <string name="lbl_email_id">Email id</string>
    <string name="lbl_ecosystem">Ecosystem.</string>
    <string name="lbl_register_here">Register Here</string>
    <string name="lbl_fullname">Fullname</string>
    <string name="lbl_doctor">Doctor</string>
    <string name="lbl_register_now">Register now</string>
    <string name="lbl_virtual">Virtual
</string>
    <string name="lbl_enter_username">enter username.</string>
    <string name="lbl_patient_profile">Patient Profile</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register_no">Register No.</string>
    <string name="lbl_enter_email">enter email</string>
    <string name="msg_enter_qualifica">enter qualification</string>
    <string name="lbl_enter_dob">enter DOB</string>
    <string name="lbl_enter_address">Enter Address</string>
    <string name="lbl_lastname">Lastname</string>
    <string name="lbl_email_id2">Email Id</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_enter_ph_no">enter ph no.</string>
    <string name="lbl_specialized">Specialized</string>
    <string name="lbl_address">Address</string>
    <string name="msg_specialized_hea">Specialized healthcare, on a single tech platform, simplifying access for anyone, anywhere.</string>
    <string name="lbl_enter_password">enter password</string>


    <!--    New-->

    <string name="msg_year_of_registe">Year Of Registeration: 2023</string>
    <string name="lbl_tue">Tue</string>
    <string name="lbl_date">Date:</string>
    <string name="lbl_report_card">Report Card</string>
    <string name="lbl_psychologist">Psychologist</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_certified_by">Certified By:</string>
    <string name="lbl_popular_doctors">Popular Doctors</string>
    <string name="lbl_dec_5">Dec 5</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_report_history">Report History</string>
    <string name="lbl_8_30_am">8.30 AM</string>
    <string name="lbl_12_30_pm">12:30 PM</string>
    <string name="lbl_kate_brown">Kate Brown</string>
    <string name="msg_how_do_you_feel">How do you feel today ?</string>
    <string name="lbl_case_id">Case Id:</string>
    <string name="msg_private_diagnos">Private Diagnosis</string>
    <string name="msg_desc_lorem_ips">Desc: Lorem ipsum gvbhgfchv
bjnhnklknljknjnjknljnjklnjj.....</string>
    <string name="msg_case_id_123456">Case Id: 123456789</string>
    <string name="msg_video_consultat">Video\u2028Consultation</string>
    <string name="lbl_hi_joe">Hi, Joe !</string>
    <string name="lbl_doctors">Doctors</string>
    <string name="msg_washington_stre">Washington Street, America</string>
    <string name="msg_next_appointmen">Next appointments</string>
    <string name="msg_registeration_n">Registeration No: 123456789</string>
    <string name="lbl_12">12</string>
    <string name="lbl_prescription">Prescription:</string>
    <string name="lbl_finished">Finished</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. </string>
    <string name="msg_global_treatmen">Global Treatment</string>
    <string name="lbl_cardiologist">Cardiologist</string>
    <string name="lbl_dr_ruth_bourne">Dr. Ruth Bourne</string>
    <string name="lbl_sos">SOS</string>
    <string name="msg_waiting_for_cal">Waiting For Call</string>
    <string name="lbl_give_feedback">Give\u2028Feedback</string>
    <string name="lbl_enquiry">Enquiry</string>
    <string name="msg_state_medical_c">State Medical Council: California</string>
    <string name="msg_upcoming_appoin">Upcoming Appointments</string>
    <string name="msg_book_appointmen">Book
Appointment</string>
    <string name="lbl_dermatologist">Dermatologist</string>


</resources>