<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:orientation="vertical" android:layout_height="match_parent">

    <LinearLayout android:id="@+id/linearRowtwelve"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal" style="@style/groupStyleblue_50cornerRadius">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumntwelve"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginStart="@dimen/_11pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_weight="0.41" android:layout_width="0dp"
            android:orientation="vertical" style="@style/groupStyleblue_A100cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtTwelve"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"

                style="@style/txtKantumruybold29" android:text="@string/lbl_12"/>
            <TextView android:ellipsize="end" android:id="@+id/txtTue"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_width="wrap_content"
                android:singleLine="true"

                style="@style/txtKantumruybold19_1" android:text="@string/lbl_tue"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumntime"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_weight="0.59" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end" android:id="@+id/txtTime"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_3pxv"
                android:paddingEnd="@dimen/_10pxh"
                android:paddingStart="@dimen/_8pxh"
                android:paddingTop="@dimen/_2pxv"
                android:singleLine="true"

                style="@style/txtSolidRounded_2" android:text="@string/lbl_12_30_pm"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtDrRuthBourne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_9pxv"
                android:layout_width="match_parent"
                android:singleLine="true"

                style="@style/txtKantumruybold15" android:text="@string/lbl_dr_ruth_bourne"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCardiologist"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_width="match_parent"
                android:singleLine="true"

                style="@style/txtKantumruybold11_1" android:text="@string/lbl_cardiologist"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
