<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"  xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EcoStart"
    >
    <LinearLayout android:gravity="start"
        android:id="@+id/linearFirstpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyledeep_purple_800">
        <TextView android:id="@+id/txtVirtualEcosyst"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_50pxh"
            android:layout_marginStart="@dimen/_50pxh"
            android:layout_marginTop="@dimen/_88pxv"
            android:layout_width="match_parent"
            android:text="Virtual System"
            style="@style/txtInterextrabold32" tools:text="@string/msg_virtual_ecosyst"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtSpecializedhea"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_specialized_hea"
            style="@style/txtInterextrabold15"
            tools:text="@string/msg_specialized_hea"/>


        <FrameLayout android:id="@+id/frameStackellipsefour"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_380pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_30pxh"
            android:layout_marginTop="@dimen/_43pxv" android:layout_width="@dimen/_310pxh">
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_105"
                android:id="@+id/viewEllipseFour"
                android:layout_gravity="start"
                android:layout_height="@dimen/_190pxv"
                android:layout_marginBottom="@dimen/_90pxv"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_90pxv" android:layout_width="@dimen/_210pxh"/>
            <ImageView
                android:id="@+id/imageRectangleThree"
                android:layout_width="@dimen/_140pxh"
                android:layout_height="@dimen/_250pxh"
                android:layout_gravity="top|start"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:scaleType="fitXY"
                android:src="@drawable/img_rectangle3"
                tools:ignore="ContentDescription" />

            <ImageView android:id="@+id/imageRectangleFour"
                android:layout_gravity="bottom|end"
                android:layout_height="@dimen/_250pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="@dimen/_140pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_rectangle4"
                tools:ignore="ContentDescription"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnGetStarted"
            android:layout_height="@dimen/_38pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="@dimen/_106pxh"
            android:paddingBottom="@dimen/_9pxv"
            android:paddingEnd="@dimen/_10pxh"

            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_9pxv" android:singleLine="true"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_get_started"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>